err/dm.zopepatches.zclasses.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dm'...
Listing './lib/python3.5/site-packages/dm/zopepatches'...
Listing './lib/python3.5/site-packages/dm/zopepatches/zclasses'...
Compiling './lib/python3.5/site-packages/dm/zopepatches/zclasses/Basic.py'...
***   File "./lib/python3.5/site-packages/dm/zopepatches/zclasses/Basic.py", line 88
    raise BadRequest, 'wrong number of actions'
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dm/zopepatches/zclasses/Method.py'...
***   File "./lib/python3.5/site-packages/dm/zopepatches/zclasses/Method.py", line 121
    raise BadRequest, 'The id, %s, is reserved' % escape(id)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dm/zopepatches/zclasses/Property.py'...
***   File "./lib/python3.5/site-packages/dm/zopepatches/zclasses/Property.py", line 76
    raise ValueError, (
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dm/zopepatches/zclasses/ZClass.py'...
***   File "./lib/python3.5/site-packages/dm/zopepatches/zclasses/ZClass.py", line 72
    exec 'class %s: pass' % nice_name in d
                        ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/dm/zopepatches/zclasses/__init__.py'...
***   File "./lib/python3.5/site-packages/dm/zopepatches/zclasses/__init__.py", line 714
    raise AttributeError, `result`
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dm/zopepatches/zclasses/doc'...
Listing './lib/python3.5/site-packages/dm/zopepatches/zclasses/dtml'...
Listing './lib/python3.5/site-packages/dm/zopepatches/zclasses/www'...
Listing './lib/python3.5/site-packages/dm.zopepatches.zclasses-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
